--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "overnats",
-  "version": "0.1.0",
-  "description": "",
-  "keywords": [],
+  "version": "0.5.0",
   "bugs": "https://github.com/yaroslav-korotaev/overnats/issues",
   "license": "MIT",
   "author": "Yaroslav Korotaev <yaroslav.korotaev@gmail.com>",
@@ -19,11 +17,13 @@
   "dependencies": {
     "erroar": "^2.0.0",
     "fast-json-stable-stringify": "^2.1.0",
-    "nanoid": "^5.0.7",
-    "nats": "^2.21.0"
+    "nanoid": "^3.3.7",
+    "nats": "^2.26.0",
+    "ominous": "^0.3.0",
+    "universe-types": "^1.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.5",
-    "typescript": "^5.4.4"
+    "@types/node": "^20.14.0",
+    "typescript": "^5.4.5"
   }
 }
